added neccsary variable for function on first question cat, trying to get question displayed with answers

--- a/index.html
+++ b/index.html
@@ -20,15 +20,15 @@
     <div class="container-fluid">
       <div>
         <h1>WELCOME TO THE HOW MANY LEGS QUIZ.</h1>
-         <p>Click Start Button</p>
+         <p id="pStart">Click Start Button</p>
         <button class="startButton" id="startButton">Start</button>
         <!-- // Q"how many legs does a cat have?" -->
         <!-- // Answers(1,2,4,3) -->
-        <div class="question">
-          <h2></h2>
+        <div>
+          <h2 id="questionHolder"></h2>
           <ul class="ulist">
             
-            <li class="listOne">34343</li>
+            <li class="listOne"></li>
             <li class="listTwo"></li>
             <li class="listThree"></li>
             <li class="listFour"></li>
