getting reapeat appends into list elements instead of clearing and changing.Leaving for now to try to get button to start timer on click.

--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
             <li class="listTwo"></li>
             <li class="listThree"></li>
             <li class="listFour"></li>
-            
+            <p id="yn"></p>
           </ul>
-        
+        <h3 id="timeLoc"></h3>
       </div>
         <!-- // Q"how many legs does a spider have?" -->
         <!-- // answers(6,4,8,10) -->
